apps/skein_compiler/test/skein/conformance/negative/effect_bare_return.skein
-- expect: E0020
-- skein-testing#1: returning an effect Result from a fn declared to return the
-- bare success type lies about the contract — the caller would crash.
module EffectBareReturn {
  capability store.table("users")

  fn find(id: Uuid) -> String {
    store.users.get(id)
  }
}
